# Python-Module-08

./: ex1.md  ex1_numpy_pandas_syntax.md  ex2.md  ex2_answer.md  peer_evaluation_prep.md
ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env.example  oracle.py
