[tool.poetry]
name = "loading-programs"
version = "0.1.0"
description = "Matrix-themed dependency management exercise"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.25.0"
pandas = "^2.1.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"